--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3094,7 +3094,7 @@
 		.wrapper.style3 {
 			background-color: #000;
 			color: #bfbfbf;
-			background-image: url(../../images/para2.jpg);
+			background-image: url(../../images/para2.jpeg);
 			background-size: cover;
 			background-attachment: fixed;
 			background-position: center;
@@ -3104,7 +3104,7 @@
 		.wrapper.style5 {
 			background-color: #000;
 			color: #bfbfbf;
-			background-image: url(../../images/para2.jpg);
+			background-image: url(../../images/para2.jpeg);
 			background-size: cover;
 			background-attachment: fixed;
 			background-position: center;
